Correction in File animation

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,7 +8,7 @@
     <title>Social Chat App</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 
 <body class="bg-gray-600 h-screen ">
