--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,53 +10,67 @@
 </head>
 
 <body>
-  <input type="radio" id="registerForm" name="formToggle" checked>
-  <div class="wrapper" id="registerFormContent">
-      <div id="container">
-          <div id="left">
-              <h1 id="welcome">Welcome</h1>
-              <p id="lorem">
-                  Social Chat App is dedicated to providing a seamless<br> chatting experience for users around the globe. Our<br>mission is to connect people and foster meaningful<br> conversations by offering a user-friendly <br>platform that transcends geographical. With<br> a focus on inclusivity and accessibility, we<br> strive to empower individuals to communicate<br> effectively, build relationships, and share <br>experiences regardless of their location or <br>background. Through features and <br>cutting-edge technology, we aim to create a vibrant<br> online community where every voice is heard and valued.
-              </p>
-          </div>
-          <form action="/register" id="right" method="post" enctype="multipart/form-data">
-              <h1 id="login">Register</h1>
-              <% if (error && error.length> 0) { %>
-              <p class="error"><%= error %></p>
-              <% } %>
-              <div class="client-info profile">
-                  <input type="file" id="profile" name="profile" required class="client-info">
-                  <span>
-                      <i class="ri-account-circle-fill"></i>
-                  </span>
-              </div>
-              <div class="input">
-                  <input type="text" id="fullname" name="fullname" required class="client-info">
-                  <label for="fullname">Full Name</label>
-              </div>
-              <div class="input">
-                  <input type="text" id="username" name="username" required class="client-info">
-                  <label for="username">Username</label>
-              </div>
-              <div class="input">
-                  <input type="email" id="email" name="email" class="client-info">
-                  <label for="email">Email</label>
-              </div>
-              <div class="input">
-                  <input type="password" name="password" id="password" class="client-info">
-                  <label for="password">Password</label>
-              </div>
-              <div class="client-info check">
-                  <input type="checkbox" id="checkbox" name="checkbox" required>
-                  <label for="checkbox">I agree to terms & conditions</label>
-              </div>
-              <input type="submit" class="client-info submit" value="Submit">
-              <button class="specialButton register">Already have an account? <label><a href="/app">Login</a></label></button>
-          </form>
-      </div>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="/javascripts/index.js"></script>
+    <input type="radio" id="registerForm" name="formToggle" checked>
+    <div class="wrapper" id="registerFormContent">
+        <div id="container">
+            <div id="left">
+                <h1 id="welcome">Welcome</h1>
+                <p id="lorem">
+                    Social Chat App is dedicated to providing a seamless<br> chatting experience for users around the
+                    globe. Our mission<br>is to connect people and foster meaningful conversations by<br>offering a
+                    user-friendly platform that transcends geographical. With<br> a focus on inclusivity and
+                    accessibility, we strive to empower<br>individuals to communicate effectively, build
+                    relationships, and<br>share experiences regardless of their location or<br>background. Through
+                    features and cutting-edge<br>technology, we aim to create a vibrant online community<br>where
+                    every voice is heard and valued.
+                </p>
+            </div>
+            <form action="/register" id="right" method="post" enctype="multipart/form-data">
+                <h1 id="login">Register</h1>
+                <% if (error && error.length> 0) { %>
+                <p class="error"><%= error %></p>
+                <% } %>
+                <div class="input">
+                    <div class="client-info profile">
+                        <input type="file" id="profile" name="profile" required class="client-info">
+                        <span>
+                            <i class="ri-account-circle-fill"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="input">
+                    <input type="text" id="fullname" name="fullname" required class="client-info">
+                    <label for="fullname">Full Name</label>
+                </div>
+                <div class="input">
+                    <input type="text" id="username" name="username" required class="client-info">
+                    <label for="username">Username</label>
+                </div>
+                <div class="input">
+                    <input type="email" id="email" name="email" class="client-info">
+                    <label for="email">Email</label>
+                </div>
+                <div class="input">
+                    <input type="password" name="password" id="password" class="client-info">
+                    <label for="password">Password</label>
+                </div>
+                <div class="input">
+                    <div class="client-info check">
+                        <input type="checkbox" id="checkbox" name="checkbox" required>
+                        <label for="checkbox">I agree to terms & conditions</label>
+                    </div>
+                </div>
+                <div class="input">
+                    <input type="submit" class="client-info submit anim" value="Submit">
+                </div>
+                <div class="input">
+                    <button class="specialButton register anim">Already have an account? <label><a href="/app">Login</a></label></button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="/javascripts/index.js"></script>
 </body>
 
 </html>
