--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -98,11 +98,11 @@ body {
 }
 
 .cover .profile-pic {
-  max-width: 120px;
-  max-height: 120px;
+  width: 120px;
+  height: 120px;
   padding: 3px;
   background-image: var(--bg);
-  margin-bottom: -25px;
+  margin-bottom: -35px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -111,7 +111,8 @@ body {
 }
 
 .cover .profile-pic img {
-  max-width: 110px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
 }
 
