--- a/public/stylesheets/edit.css
+++ b/public/stylesheets/edit.css
@@ -1,17 +1,98 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    width: 100%;
+    font-family: Arial, sans-serif;
+}
+
+:root {
+    --main-color: #fff;
+    --second-color: #347deb;
+    --box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    --register-color: rgb(60, 90, 154);
+    --forgot-color: rgb(220, 74, 61);
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(310deg, #df98fa, #9055ff);
+    padding-block: 2rem;
+
+}
+
 .container {
-    max-width: 600px;
+    max-width: 60%;
+    min-width: 60%;
+    height: 100%;
+    margin-inline: 5rem;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background: var(--main-color);
+    box-shadow: var(--box-shadow);
 }
 
 h1 {
     text-align: center;
 }
 
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.form div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.form div input,
+.form div textarea {
+    width: 50%;
+    resize: none;
+    transition: all 200ms;
+}
+
+.form div input:focus,
+.form div textarea:focus {
+    width: 80%;
+}
+
+.form div input:focus~label {
+    left: 20%;
+}
+
+.form div textarea:focus~label {
+    left: 20%;
+}
+
 .form-group {
     margin-bottom: 20px;
+}
+
+.form div label {
+    position: absolute;
+    top: -15%;
+    left: 30%;
+    background-color: #fff;
+    padding: 0 0.5rem;
+    color: gray;
+    font-size: 0.8rem;
 }
 
 label {
@@ -28,31 +109,172 @@ textarea {
     box-sizing: border-box;
 }
 
+.group {
+    border: 1px solid black;
+    padding-top: 2rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    display: none !important;
+}
+
+.add {
+    gap: 1rem;
+}
+
+.add label {
+    top: -6% !important;
+}
+
 button {
     display: block;
-    width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #9055ff;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    width: 45%;
+    transition: all 200ms;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #df98fa;
+    width: 70%;
 }
 
 .img-tag {
     text-align: center;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 6px solid rgba(163, 163, 163, 0.966);
+    background: linear-gradient(to bottom right, rgb(171, 171, 184), rgb(136, 133, 138));
+    /* Set background gradient */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .img-tag img {
     width: 100px;
     height: 100px;
     object-fit: cover;
-    border-radius: 50%;
-    margin: 0 auto;
-    display: block;
+}
+
+.img-tag span {
+    width: 100%;
+    height: 100%;
+}
+
+.img-tag i {
+    color: rgb(95, 95, 95);
+    font-size: 10vh;
+}
+.profile{
+    position: absolute;
+    top: 2%;
+    left: 5%;
+    border-radius: 5px;
+    padding: 5px;
+    transition: background 0.3s ease-in-out;
+}
+.profile:hover{
+    background: gray;
+}
+.navbar {
+    display: flex;
+    background-color: #333;
+    padding: 10px;
+    flex-direction: column;
+    position: sticky;
+    top: 1rem;
+    left: 2rem;
+    gap: 3rem;
+    border-radius: 10px;
+    height: 95vh;
+}
+
+.navbar-brand {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 800;
+    text-decoration: none;
+    text-align: center;
+}
+
+.navbar-toggler {
+    display: none;
+}
+
+.navbar-nav {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.nav-link {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    text-align: center;
+}
+
+.nav-link:hover {
+    background-color: #555;
+}
+
+/* Show current group */
+.group.active {
+    display: flex !important;
+    animation: scaleIn 0.5s forwards;
+}
+
+@keyframes scaleIn {
+    from {
+        transform: scale(0);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    body{
+        flex-direction: column;
+        height: 100vh;
+    }
+    .navbar {
+        margin-top: 2rem;
+        left: unset;
+        gap: 1rem;
+        margin-bottom: 2vh;
+        height: max-content;
+    }
+    .navbar-nav {
+        flex-direction: row;
+    }
+    .container{
+        max-width: unset;
+        width:80%;
+        height: max-content;
+    }
+    .container h1{
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+    }
+    #p1{
+        display: block !important;
+    }
+    #p2{
+        display: none;
+    }
+}
+#p1{
+    display: none;
 }
